Fix: Avoid enable button when scrollbar bounces (IOS)

--- a/src/app/features/iframe/containers/iframe/iframe.component.scss
+++ b/src/app/features/iframe/containers/iframe/iframe.component.scss
@@ -147,6 +147,11 @@
 
 
 // Material overwrites
+mat-card-title {
+  word-break: break-all;
+  hyphens: auto;
+}
+
 mat-card-subtitle mat-icon, .step1_header_tags mat-icon {
   height: 1.8rem;
   width: 1.8rem;
